labs/services/specs/ckad/external-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-db
  labels:
    kubernetes.courselabs.co: services
spec:
  type: ExternalName
  externalName: database.example.com
  # No ports needed - DNS CNAME alias only
