labs/services/specs/ckad/lab-challenge-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  labels:
    kubernetes.courselabs.co: services
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-api
      tier: api
  template:
    metadata:
      labels:
        app: backend-api
        tier: api
    spec:
      containers:
        - name: api
          image: sixeyed/whoami:21.04
          ports:
            - name: api
              containerPort: 80
            - name: metrics
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-api-svc
  labels:
    kubernetes.courselabs.co: services
spec:
  type: ClusterIP
  selector:
    app: backend-api
    tier: api
  ports:
    - name: api
      port: 8080
      targetPort: api
    - name: metrics
      port: 9090
      targetPort: metrics
