labs/services/specs/ckad/whoami-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-headless
  labels:
    kubernetes.courselabs.co: services
spec:
  clusterIP: None  # This makes the service headless
  selector:
    app: whoami
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
