labs/services/specs/ckad/whoami-multiport.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-multiport
  labels:
    kubernetes.courselabs.co: services
spec:
  selector:
    app: whoami
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http-web
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: 9090
      protocol: TCP
    - name: admin
      port: 8888
      targetPort: 80
      protocol: TCP
