labs/services/specs/ckad/service-with-networkpolicy.yaml
apiVersion: v1
kind: Service
metadata:
  name: restricted-service
  labels:
    kubernetes.courselabs.co: services
spec:
  selector:
    app: restricted-app
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restricted-app
  labels:
    kubernetes.courselabs.co: services
spec:
  replicas: 2
  selector:
    matchLabels:
      app: restricted-app
  template:
    metadata:
      labels:
        app: restricted-app
    spec:
      containers:
        - name: whoami
          image: sixeyed/whoami:21.04
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-frontend-only
  labels:
    kubernetes.courselabs.co: services
spec:
  podSelector:
    matchLabels:
      app: restricted-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: frontend
      ports:
        - protocol: TCP
          port: 80
